# rag-tutorial

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  rag_common.py
hourei/: ask-rag.py  compare-ask.py  flow.md  get-laws-from-egov.py  mk-rag-db-from-text.py  search-rag-db.py
hourei/compare/: after-search.txt  ask-compare.txt  before-search.txt
joseito/: ask-rag.py  get-text-from-url.py  joseito.txt  mk-rag-db-from-text.py  rag_common.py  search-rag-db.py
joseito/joseito.db/: index.faiss  index.pkl
wikipedia/: ask-rag.py  get-articles-from-wikipedia.py  mk-rag-db-from-text.py  search-rag-db.py
